Wrap fix

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 .container {
   display: flex;
   flex-wrap: nowrap;
+  margin-top: 5%;
   flex-direction: column; 
   justify-content: center;
   align-items: center;
